<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ffbb33"
    android:orientation="vertical"
    android:padding="20dp"
    android:baselineAligned="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completeprofile"
        android:id="@+id/textView"
        android:textColor="#fff"
        android:textSize="30dp" />

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewFlipper"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="left|top">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/YourEmail"
                android:textColor="#000"
                android:textColorHint="#000"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:typeface="normal" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/YourPassword"
                android:textColor="#000"
                android:textColorHint="#000"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:typeface="normal"
                android:textIsSelectable="false"
                android:singleLine="false"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YourSexual"
                android:id="@+id/textView"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:id="@+id/ckFemale"
                    android:layout_gravity="left" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:id="@+id/ckMale"

                    android:layout_gravity="left" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YourLocations"
                android:id="@+id/textView"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_gravity="left"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TP.HO CHI MINH"
                    android:id="@+id/ckHcm"
                    android:layout_gravity="left" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HA NOI"
                    android:id="@+id/ckHanoi"

                    android:layout_gravity="left" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DA NANG"
                    android:id="@+id/ckDaNang"

                    android:layout_gravity="left" />

            </RadioGroup>
        </LinearLayout>
    </ViewFlipper>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:id="@+id/btnNext"
            android:background="@drawable/loginbutton"
            android:layout_gravity="center_horizontal|bottom|left"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>