<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp">
    <LinearLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:orientation="vertical">
        <TextView
            android:id="@+id/labelBengDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelBengDescription"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/txtBengDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/labelLocationToApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLocationToApply"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/labelPlaceGetBeng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelPlaceGetBeng"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txtPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/labelContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelHowContact"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <TextView
            android:id="@+id/txtHowContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:text="@string/beng_submit_title"
            android:textColor="#ff4444"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_margin="10dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/btnDiscard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:text="@string/beng_discard_title"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_margin="10dp"
            android:onClick="onDiscard"
            android:layout_weight="1" />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:mirrorForRtl="true" />
    </LinearLayout>

</LinearLayout>
