<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selecotor"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:shape="rectangle">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="1dip">

            <ImageView
                android:id="@+id/Image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:paddingTop="3dp"
                android:scaleType="center"
                android:cropToPadding="true"
                android:adjustViewBounds="true" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/Deadline"
            android:textColor="#000" />

        <TextView
            android:id="@+id/Deadline"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0"
            android:gravity="center"
            android:maxEms="30"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NameItem"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:minHeight="1dp"
            android:minLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp">


        <TextView
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/txtComment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/btnComments"
            android:clickable="true"
            android:background="@drawable/button_style"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#000"
            android:layout_marginRight="2dp" />

        <TextView
            android:id="@+id/BengButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:background="@drawable/red_button_style"
            android:text="@string/Benggg"
            android:layout_weight="1"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/BtnViewResult"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:text="@string/ViewResult"
            android:background="@drawable/green_button_style"
            android:clickable="true"
            android:layout_weight="1"
            android:textColor="#fff" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>