<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selecotor"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:shape="rectangle" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top" >

        <TextView
            android:id="@+id/titlename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            
            android:text=" " />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:paddingTop="3dp"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/btnlogin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/ic_action_overflow"
            android:text=" " />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <TextView
            android:id="@+id/NameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:minHeight="1dp"
            android:minLines="1"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp"
            android:text="Small Text\n asdasd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/Deadline"
            android:textColor="#000" />

        <TextView
            android:id="@+id/Deadline"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0"
            android:gravity="center"
            android:maxEms="30"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Namedetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text=" "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/BengButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/beng_button"
            android:paddingBottom="3dp"
            android:text="@string/Benggg"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textColorHint="#000"
            android:textColorLink="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BtnViewResult"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/viewresult_button"
            android:paddingBottom="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/ViewResult"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>